--- a/index.html
+++ b/index.html
@@ -2,11 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Local Weather App</title>
 </head>
+
 <body>
-    
+    <nav class="nav navbar-default justify-content-center">
+        <ul class="nav">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">Local Weather</a>
+            </li>
+            <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container">
+
+        <div class="card text-center">
+            <h1>
+                Hanoi 
+            </h1>        
+            <div class="row h-100">
+                <div class="col-sm-12 align-self-center">
+                    <!-- <h2>Hanoi</h2> -->
+                    <div class="temp">24&deg;C </div> 
+                    <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>   
+                    <img src="images/sunny.png" alt="sunny" class="img-fluid">
+                    <div class="weather-type">Sunny</div>
+                </div>
+        </div>
+
+    </div>
+
+
+    <!-- Bootsrtap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
