--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Local Weather App</title>
 </head>
 
@@ -25,20 +26,20 @@
     <div class="container">
 
         <div class="card text-center">
-            <h1>
+            <h1 class="location">
                 Hanoi 
             </h1>        
             <div class="row h-100">
-                <div class="col-sm-12 align-self-center">
-                    <!-- <h2>Hanoi</h2> -->
+                <div class="col-sm-12 weather-content">
                     <div class="temp">24&deg;C </div> 
                     <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>   
                     <img src="images/sunny.png" alt="sunny" class="img-fluid">
                     <div class="weather-type">Sunny</div>
-                </div>
-        </div>
+                </div> <!-- col -->
+            </div> <!-- row -->
+        </div> <!-- card -->
 
-    </div>
+    </div> <!-- container -->
 
 
     <!-- Bootsrtap Scripts -->
