--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
 </head>
 
 <body>
-    <nav class="nav navbar-default justify-content-center">
-        <ul class="nav">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Local Weather</a>
-            </li>
+    <nav class="navbar navbar-default shadow-sm p-3 mb-5">
+        <a href="index.html" class="navbar-brand mx-auto pl-5">Local Weather</a>
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="about.html" class="nav-link">About</a>
             </li>
@@ -26,15 +24,15 @@
     <div class="container">
 
         <div class="card text-center">
-            <h1 class="location">
+            <h1 id="location">
                 Hanoi 
             </h1>        
             <div class="row h-100">
-                <div class="col-sm-12 weather-content">
-                    <div class="temp">24&deg;C </div> 
+                <div class="col-sm-12" id="weather-content">
+                    <div id="temp">24&deg; <span id="temp-scale">C</span> </div> 
                     <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>   
-                    <img src="images/sunny.png" alt="sunny" class="img-fluid">
-                    <div class="weather-type">Sunny</div>
+                    <img src="images/sunny.png" alt="sunny" class="img-fluid" id="weather-icon">
+                    <div id="weather-type">Sunny</div>
                 </div> <!-- col -->
             </div> <!-- row -->
         </div> <!-- card -->
