--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <div class="row h-100">
                 <div class="col-sm-12" id="weather-content">
                     <div id="temp">24&deg; <span id="temp-scale">C</span> </div> 
-                    <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>   
+                    <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>
                     <img src="images/sunny.png" alt="sunny" class="img-fluid" id="weather-icon">
                     <div id="weather-type">Sunny</div>
+                    <div id="results"> </div>
                 </div> <!-- col -->
             </div> <!-- row -->
         </div> <!-- card -->
@@ -41,8 +42,9 @@
 
 
     <!-- Bootsrtap Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="main.js" type="application/javascript"></script>
 </body>
 </html>
