--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    
-    <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/app.css" type="text/css">
@@ -24,23 +23,19 @@
     <div class="container">
 
         <div class="card text-center">
-            <h1 id="location">
-                Hanoi 
-            </h1>        
+            <h1 id="location">Location</h1>
             <div class="row h-100">
                 <div class="col-sm-12" id="weather-content">
-                    <div id="temp">24&deg; <span id="temp-scale">C</span> </div> 
-                    <button type="button" class="btn btn-outline-light">Switch to Fahrenheit</button><br/>
-                    <img src="images/sunny.png" alt="sunny" class="img-fluid" id="weather-icon">
-                    <div id="weather-type">Sunny</div>
-                    <div id="results"> </div>
-                </div> <!-- col -->
-            </div> <!-- row -->
-        </div> <!-- card -->
-    </div> <!-- container -->
+                    <div id="temp-box"><span id="temp">-</span>&nbsp;<span id="temp-scale"></span> </div>
+                    <div><button id="switch-temp" type="button" class="btn btn-outline-light">Switch to Fahrenheit</button></div>
+                    <div><img src="images/sunny.png" alt="sunny" class="img-fluid" id="weather-icon"></div>
+                    <div id="weather-type"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <!-- Bootsrtap Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
