--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <nav class="navbar navbar-default shadow-sm p-3 mb-5">
-        <a href="index.html" class="navbar-brand mx-auto pl-5">Local Weather</a>
+        <a href="/" class="navbar-brand mx-auto pl-5">Local Weather</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a>
+                <a href="/about" class="nav-link">About</a>
             </li>
         </ul>
     </nav>
